--- a/demo.html
+++ b/demo.html
@@ -122,6 +122,7 @@
               <tbody>
                 <tr><td><code>chome35</code></td> <td>Google Chrome</td><td>11-37</td></tr>
                 <tr><td><code>firefox32</code></td> <td>Mozilla Firefox</td><td>14-32</td></tr>
+                <tr><td><code>firefox8</code></td> <td>Mozilla Firefox</td><td>8-13</td></tr>
               </tbody>
             </table>
 
@@ -143,6 +144,10 @@
             <h3>unrecognized browser</h3>
             <div class="padlock" data-padlock-browser="unknown"> </div>
             <div class="padlock" data-padlock-browser="unknown" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
+            <h3>firefox 8-13</h3>
+            <div class="padlock" data-padlock-browser="firefox8"> </div>
+            <div class="padlock" data-padlock-browser="firefox8" data-padlock-ev-identity="Example LLC [XX]"> </div>
           </div>
         </div>
       </div>
