--- a/demo.html
+++ b/demo.html
@@ -123,6 +123,7 @@
                 <tr><td><code>chome35</code></td> <td>Google Chrome</td><td>11-37</td></tr>
                 <tr><td><code>firefox32</code></td> <td>Mozilla Firefox</td><td>14-32</td></tr>
                 <tr><td><code>firefox8</code></td> <td>Mozilla Firefox</td><td>8-13</td></tr>
+                <tr><td><code>ie9</code></td> <td>Internet Explorer</td><td>9-10</td></tr>
               </tbody>
             </table>
 
@@ -141,6 +142,10 @@
             <div class="padlock" data-padlock-browser="firefox32"> </div>
             <div class="padlock" data-padlock-browser="firefox32" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
+            <h3>ie 9-10</h3>
+            <div class="padlock" data-padlock-browser="ie9"> </div>
+            <div class="padlock" data-padlock-browser="ie9" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
             <h3>unrecognized browser</h3>
             <div class="padlock" data-padlock-browser="unknown"> </div>
             <div class="padlock" data-padlock-browser="unknown" data-padlock-ev-identity="Example LLC [XX]"> </div>
@@ -148,6 +153,7 @@
             <h3>firefox 8-13</h3>
             <div class="padlock" data-padlock-browser="firefox8"> </div>
             <div class="padlock" data-padlock-browser="firefox8" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
           </div>
         </div>
       </div>
