--- a/demo.html
+++ b/demo.html
@@ -124,6 +124,8 @@
                 <tr><td><code>firefox32</code></td> <td>Mozilla Firefox</td><td>14-32</td></tr>
                 <tr><td><code>firefox8</code></td> <td>Mozilla Firefox</td><td>8-13</td></tr>
                 <tr><td><code>ie9</code></td> <td>Internet Explorer</td><td>9-10</td></tr>
+                <tr><td><code>ie8</code></td> <td>Internet Explorer</td><td>8</td></tr>
+                <tr><td><code>ie7</code></td> <td>Internet Explorer</td><td>7</td></tr>
               </tbody>
             </table>
 
@@ -154,6 +156,13 @@
             <div class="padlock" data-padlock-browser="firefox8"> </div>
             <div class="padlock" data-padlock-browser="firefox8" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
+            <h3>ie 8</h3>
+            <div class="padlock" data-padlock-browser="ie8"> </div>
+            <div class="padlock" data-padlock-browser="ie8" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
+            <h3>ie 7</h3>
+            <div class="padlock" data-padlock-browser="ie7"> </div>
+            <div class="padlock" data-padlock-browser="ie7" data-padlock-ev-identity="Example LLC [XX]"> </div>
           </div>
         </div>
       </div>
