--- a/demo.html
+++ b/demo.html
@@ -126,6 +126,7 @@
                 <tr><td><code>ie9</code></td> <td>Internet Explorer</td><td>9-10</td></tr>
                 <tr><td><code>ie8</code></td> <td>Internet Explorer</td><td>8</td></tr>
                 <tr><td><code>ie7</code></td> <td>Internet Explorer</td><td>7</td></tr>
+                <tr><td><code>opera15</code></td> <td>Opera</td><td>15-20</td></tr>
               </tbody>
             </table>
 
@@ -147,6 +148,10 @@
             <h3>ie 9-10</h3>
             <div class="padlock" data-padlock-browser="ie9"> </div>
             <div class="padlock" data-padlock-browser="ie9" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
+            <h3>opera 15-20</h3>
+            <div class="padlock" data-padlock-browser="opera15"> </div>
+            <div class="padlock" data-padlock-browser="opera15" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
             <h3>unrecognized browser</h3>
             <div class="padlock" data-padlock-browser="unknown"> </div>
