--- a/demo.html
+++ b/demo.html
@@ -127,6 +127,7 @@
                 <tr><td><code>ie8</code></td> <td>Internet Explorer</td><td>8</td></tr>
                 <tr><td><code>ie7</code></td> <td>Internet Explorer</td><td>7</td></tr>
                 <tr><td><code>opera15</code></td> <td>Opera</td><td>15-20</td></tr>
+                <tr><td><code>safari5</code></td> <td>Safari</td><td>4-5</td></tr>
               </tbody>
             </table>
 
@@ -152,6 +153,10 @@
             <h3>opera 15-20</h3>
             <div class="padlock" data-padlock-browser="opera15"> </div>
             <div class="padlock" data-padlock-browser="opera15" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
+            <h3>safari 4-5</h3>
+            <div class="padlock" data-padlock-browser="safari5"> </div>
+            <div class="padlock" data-padlock-browser="safari5" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
             <h3>unrecognized browser</h3>
             <div class="padlock" data-padlock-browser="unknown"> </div>
