add some more margins to the demo

--- a/demo.html
+++ b/demo.html
@@ -26,6 +26,7 @@
           h3 {
             color: #666;
             font-size: 18px;
+            margin-top: 1.75em;
             margin-bottom: 1em;
           }
           #intro {
