--- a/demo.html
+++ b/demo.html
@@ -128,6 +128,7 @@
                 <tr><td><code>ie8</code></td> <td>Internet Explorer</td><td>8</td></tr>
                 <tr><td><code>opera15</code></td> <td>Opera</td><td>15-20</td></tr>
                 <tr><td><code>safari5</code></td> <td>Safari</td><td>4-5</td></tr>
+                <tr><td><code>android4</code></td> <td>Android (stock browser)</td><td>4.1.2</td></tr>
               </tbody>
             </table>
 
@@ -149,6 +150,10 @@
             <h3>ie 9-10</h3>
             <div class="padlock" data-padlock-browser="ie9"> </div>
             <div class="padlock" data-padlock-browser="ie9" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
+            <h3>android 4 stock browser</h3>
+            <div class="padlock" data-padlock-browser="android4"> </div>
+            <div class="padlock" data-padlock-browser="android4" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
             <h3>opera 15-20</h3>
             <div class="padlock" data-padlock-browser="opera15"> </div>
