use en-dashes for version ranges

--- a/demo.html
+++ b/demo.html
@@ -121,13 +121,13 @@
                 <th>Versions</th>
               </thead>
               <tbody>
-                <tr><td><code>chome35</code></td> <td>Google Chrome</td><td>11-37</td></tr>
-                <tr><td><code>firefox32</code></td> <td>Mozilla Firefox</td><td>14-32</td></tr>
-                <tr><td><code>firefox8</code></td> <td>Mozilla Firefox</td><td>8-13</td></tr>
-                <tr><td><code>ie9</code></td> <td>Internet Explorer</td><td>9-10</td></tr>
+                <tr><td><code>chome35</code></td> <td>Google Chrome</td><td>11–37</td></tr>
+                <tr><td><code>firefox32</code></td> <td>Mozilla Firefox</td><td>14–32</td></tr>
+                <tr><td><code>firefox8</code></td> <td>Mozilla Firefox</td><td>8–13</td></tr>
+                <tr><td><code>ie9</code></td> <td>Internet Explorer</td><td>9–10</td></tr>
                 <tr><td><code>ie8</code></td> <td>Internet Explorer</td><td>8</td></tr>
-                <tr><td><code>opera15</code></td> <td>Opera</td><td>15-20</td></tr>
-                <tr><td><code>safari5</code></td> <td>Safari</td><td>4-5</td></tr>
+                <tr><td><code>opera15</code></td> <td>Opera</td><td>15–20</td></tr>
+                <tr><td><code>safari5</code></td> <td>Safari</td><td>4–5</td></tr>
                 <tr><td><code>android4</code></td> <td>Android (stock browser)</td><td>4.1.2</td></tr>
               </tbody>
             </table>
@@ -139,15 +139,15 @@
             <div class="padlock"> </div>
             <div class="padlock" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
-            <h3>chrome 11-37</h3>
+            <h3>chrome 11–37</h3>
             <div class="padlock" data-padlock-browser="chrome35"> </div>
             <div class="padlock" data-padlock-browser="chrome35" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
-            <h3>firefox 14-32</h3>
+            <h3>firefox 14–32</h3>
             <div class="padlock" data-padlock-browser="firefox32"> </div>
             <div class="padlock" data-padlock-browser="firefox32" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
-            <h3>ie 9-10</h3>
+            <h3>ie 9–10</h3>
             <div class="padlock" data-padlock-browser="ie9"> </div>
             <div class="padlock" data-padlock-browser="ie9" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
@@ -155,19 +155,21 @@
             <div class="padlock" data-padlock-browser="android4"> </div>
             <div class="padlock" data-padlock-browser="android4" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
-            <h3>opera 15-20</h3>
+            <h3>opera 15–20</h3>
             <div class="padlock" data-padlock-browser="opera15"> </div>
             <div class="padlock" data-padlock-browser="opera15" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
-            <h3>safari 4-5</h3>
+            <h3>safari 4–5</h3>
             <div class="padlock" data-padlock-browser="safari5"> </div>
             <div class="padlock" data-padlock-browser="safari5" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
+            <hr>
 
             <h3>unrecognized browser</h3>
             <div class="padlock" data-padlock-browser="unknown"> </div>
             <div class="padlock" data-padlock-browser="unknown" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
-            <h3>firefox 8-13</h3>
+            <h3>firefox 8–13</h3>
             <div class="padlock" data-padlock-browser="firefox8"> </div>
             <div class="padlock" data-padlock-browser="firefox8" data-padlock-ev-identity="Example LLC [XX]"> </div>
 
