add Chrome 40 on Android 4.4.2

--- a/demo.html
+++ b/demo.html
@@ -122,6 +122,7 @@
               </thead>
               <tbody>
                 <tr><td><code>chome35</code></td> <td>Google Chrome</td><td>11–37</td></tr>
+                <tr><td><code>mobilechrome40</code></td> <td>Chrome on Android</td><td>40 / 4.2.2</td></tr>
                 <tr><td><code>firefox32</code></td> <td>Mozilla Firefox</td><td>14–32</td></tr>
                 <tr><td><code>firefox8</code></td> <td>Mozilla Firefox</td><td>8–13</td></tr>
                 <tr><td><code>ie9</code></td> <td>Internet Explorer</td><td>9–10</td></tr>
@@ -150,6 +151,10 @@
             <h3>ie 9–10</h3>
             <div class="padlock" data-padlock-browser="ie9"> </div>
             <div class="padlock" data-padlock-browser="ie9" data-padlock-ev-identity="Example LLC [XX]"> </div>
+
+            <h3>mobile chrome 40 (Android 4.4.2)</h3>
+            <div class="padlock" data-padlock-browser="mobilechrome40"> </div>
+            <!-- no difference <div class="padlock" data-padlock-browser="mobilechrome40" data-padlock-ev-identity="Example LLC [XX]"> </div> -->
 
             <h3>android 4 stock browser</h3>
             <div class="padlock" data-padlock-browser="android4"> </div>
